# wsf

./: README.md
c/: AUTHORS  CREDITS  ChangeLog  INSTALL  Makefile.am  NEWS  NOTICE  README  autogen.sh  build.bat  build.sh  build_samples.sh  clean.bat  clean.sh  configure.ac  configure.in  dist.sh  dist_hook.sh  link.sh  link_samples.sh  samples.sh
c/080624/: AUTHORS  ChangeLog  Makefile.am  NEWS  NOTICE  build.bat  build.sh  build_samples.sh  configure.in  dist.sh  link.sh
c/adminservices/: ChangeLog  INSTALL  Makefile.am  NEWS  README  adminservices.mk  adminservices.sln  build.bat  build.sh  clean.bat  configure.ac  configure.in  configure.in_win32  makefile  setup.bat  setup.sh
c/axis2c/: AUTHORS  CREDITS  ChangeLog  INSTALL  Makefile.am  NOTICE  README  autogen.sh  axis2c.pc.in  axis2c_build.sh  bindist.sh  build.sh  clean.sh  configure.ac  dist.sh  maven.xml  project.properties  project.xml
c/config/: axis2.xml
c/db/: uuid
c/docs/: index.html  index_content.html  install_guide.html  toc.html
c/examples/: Makefile.am  autogen.sh  configure.ac
c/rampartc/: ChangeLog  INSTALL  Makefile.am  NEWS  NOTICE  README  build.sh  configure.ac  copy_samples.sh  maven.xml  project.xml  rampart-bindist.sh  rampart-tests.sh  sd.sh
c/samples/: Makefile.am  configure.ac
c/sandesha2c/: AUTHORS  INSTALL  Makefile.am  NEWS  README  autogen.sh  build.sh  configure.ac  maven.xml  project.properties  project.xml
c/savanc/: Makefile.am  build.sh  configure.ac  maven.xml  project.properties  project.xml
c/wsclient/: INSTALL  Makefile.am  README  build.sh  configure.ac  wsclient.mk  wsclient.vcproj
cpp/: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  NOTICE  README  README.DIST  README.ECLIPSE.CODEGEN.PLUGIN  README.INSTALL.LINUX  README.INSTALL.WINDOWS  README.SAMPLES  autogen.sh  build.bat  build.sh  build_codegen.bat  build_codegen.sh  build_samples.sh  clean.bat  configure.ac  configure.in  copy_codegen.bat  dist.sh  dist_hook.sh  init.bat  sign.sh  wsf_c_build.bat
cpp/docs/: index.html  index_content.html  install_guide_linux.html  install_guide_windows.html  install_samples.html  manual.html  manual_content.html  manual_toc.html  toc.html
cpp/examples/: Makefile.am  autogen.sh  configure.ac  samples.mk
cpp/include/: ADBDefines.h  ADBObject.h  AuthenticationProvider.h  AxisFault.h  AxisObject.h  DateTime.h  Environment.h  Exception.h  ICallback.h  MessageContext.h  MessageReceiver.h  NeethiException.h  NeethiObject.h  NeethiPolicy.h  OMAttribute.h  OMDataHandler.h  OMElement.h  OMException.h  OMNamespace.h  OMNode.h  OMObject.h  OMText.h  Options.h  Parameter.h  PasswordCallback.h  Process.h  Property.h  Qname.h  RWLock.h  ReplayDetector.h  SCTProvider.h  ServiceClient.h  ServiceSkeleton.h  Stub.h  WSFDefines.h  WSFError.h  WSFException.h  WSFault.h  WSRESTClient.h  WSSOAPClient.h  (+1 more)
cpp/samples/: Makefile.am  README  samples.mk
cpp/src/: AxisFault.cpp  AxisObject.cpp  Makefile.am  MessageContext.cpp  NeethiException.cpp  NeethiObject.cpp  NeethiPolicy.cpp  OMAttribute.cpp  OMDataHandler.cpp  OMElement.cpp  OMException.cpp  OMNamespace.cpp  OMNode.cpp  OMObject.cpp  OMText.cpp  Options.cpp  Parameter.cpp  Process.cpp  RWLock.cpp  ServiceClient.cpp  WSRESTClient.cpp  WSSOAPClient.cpp  wsf.mk
php/: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  NOTICE  README  README.INSTALL  README.INSTALL_WIN32  README.INSTALL_WIN32_ZC  README.SSL_CLIENT  autogen.sh  build.bat  build.sh  build_dev.bat  clean.bat  config.m4  configure.ac  configure.in  dist.sh  package2.xml  wsf_c_build.bat  wsf_c_dist_hook.sh
php/docs/: api_content.html  api_toc.html  data_services_manual.html  index.html  index_content.html  index_toc.html  install_guide.html  manual.html  manual_content.html  manual_toc.html  rm_api.html  rm_manual.html  security_api.html  security_manual.html  wsdl.html  wsdl_generation_api.html  wsdl_manual.html  wsdl_mode_api.html  wsdl_mode_manual.html
php/samples/: README.SAMPLES  README.SSL_CLIENT  add_soap_header_client.php  add_soap_header_client1.php  add_soap_header_with_child_client.php  class_based_service.php  class_based_service_client.php  echo_client.php  echo_client_addr.php  echo_client_multiple_invocation.php  echo_client_rest.php  echo_client_rm.php  echo_client_soap11.php  echo_service.php  echo_service_addr.php  echo_service_class.php  echo_service_with_rest.php  fault_client.php  fault_service.php  index.html  math_client.php  math_service.php  mtom_download_service.php  mtom_upload_client_base64.php  notify_client.php  notify_service.php  reply_echo_service.php  request_client_dom.php  request_client_msg.php  request_client_str.php  ssl_client.php  wsdl_service_doclit.php
php/scripts/: wsdl2php.php  wsf.php  wsf_wsdl.php  wsf_wsdl_include.php
php/src/: README.INSTALL_WIN32  build.mk  client.c  config.m4  config.w32  out_transport_info.c  package2.xml  php_encoding.c  php_encoding.h  php_http.c  php_http.h  php_schema.c  php_schema.h  php_sdl.c  php_sdl.h  php_xml.c  php_xml.h  policy.c  project.xml  stream.c  util.c  worker.c  wsf.c  wsf.h  wsf.rc  wsf_client.c  wsf_client.h  wsf_common.h  wsf_out_transport_info.c  wsf_out_transport_info.h  wsf_policy.c  wsf_policy.h  wsf_soap.c  wsf_soap.h  wsf_stream.c  wsf_stream.h  wsf_util.c  wsf_util.h  wsf_version.h  wsf_worker.c  (+7 more)
ruby/: .wsf_ruby_root  AUTHORS  ChangeLog  INSTALL  INSTALL_WIN32  NEWS  NOTICE  README  README.BUILD_WIN32_SVN  README.INSTALL  README.INSTALL_WIN32  README.SAMPLES  WSFC-i386-mswin32.def  WSFC_wrapper.c  build.bat  build.sh  build_dist.bat  clean.bat  configure.in  configure.in.dist  configure.in.src  configure.in.wsdlc  extconf.rb  find_config_h.rb  find_rbconfig.rb  generate_wrapper.bat  get_wsfc_home.rb  init.bat  install.rb  sync_src.rb  wsf_c_build.bat
ruby/conf/: wsdlc_type_map.xml
ruby/docs/: api_content.html  api_toc.html  features.html  index_content.html  index_toc.html  install_guide.html  manual_content.html  manual_toc.html  rm_api.html  rm_manual.html  roadmap.html  security_api.html  security_manual.html  wsdl_generation_api.html  wsdl_manual.html  (+2 more)
(+7383 files in other folders)
