#############################################################################
### General Build Configuration Parameters

# To build with debug symbols set DEBUG = 1
DEBUG = 1
#CRUNTIME Library ( Use /MD or /MT)
CRUNTIME=/MD
# embed manifest files or not
EMBED_MANIFEST = 1

#############################################################################
### Apache Axis2/C Build Configuration Parameters

# Path to libxml2 installation
LIBXML2_BIN_DIR = "C:\Program Files (x86)\libxml2-2.7.6.win32"
#path to libxslt installation
LIBXSLT_BIN_DIR="C:\Program Files (x86)\libxslt-1.1.26.win32"

# Path to iconv installation
ICONV_BIN_DIR = "C:\Program Files (x86)\iconv-1.9.2.win32"

# Path to zlib installation
ZLIB_BIN_DIR = "C:\Program Files (x86)\zlib-1.2.3.win32"

# Path to OpenSSL installation
OPENSSL_BIN_DIR = C:\OpenSSL 

# Path to Apache2 installation
APACHE_BIN_DIR = "C:\Program Files (x86)\Apache Software Foundation\Apache2.2"
# Apache httpd version, to use apache 2.0.x famlity set APACHE_VERSION_IS_2_0_X = 1
APACHE_VERSION_2_0_X = 0

# Enable/disable LibCurl client transport, to enable set ENABLE_LIBCURL = 1
ENABLE_LIBCURL = 0
# Path to LibCurl installation, required if LibCurl transport is enabled
#LIBCURL_BIN_DIR = E:\libcurl-7.15.1-msvc-win32-ssl-0.9.8a-zlib-1.2.3

# Enable/disable SSL client transport, to enable set ENABLE_SSL = 1
ENABLE_SSL = 0
# Path to OpenSSL installation, required if SSL transport is enabled

# build axis2 with Libxml2 Parser. Axis2/C will be built with embeded guththila 
# parser by Default.
ENABLE_LIBXML2=0

# Build TCP server in addition to HTTP server
WITH_TCP = 1

# Build UDP transport sender, receiver and server 
WITH_UDP = 1

# build with archive based deployment support
WITH_ARCHIVE = 0

#############################################################################
### Apache Rampart/C Build Configuration Parameters

# Whether Rampart/C is built or not
ENABLE_RAMPARTC = 1

#############################################################################
### Apache Sandesha2/C Build Configuration Parameters

# Whether Sandesha2/C is built or not
ENABLE_SANDESHA2C = 1

#############################################################################
### Apache Savan/C Build Configuration Parameters

# Whether Savan/C is built or not
ENABLE_SAVANC = 1


